<resources>
    <string name="app_name">淘果</string>
    <string name="login_activity_username_label">账号：</string>
    <string name="login_activity_password_label">密码：</string>
    <string name="login_activity_ok_button">登录</string>
    <string name="login_activity_register_button">注册</string>
    <string name="Remember">记住密码</string>
    <string name="Forget">忘记密码？</string>
    <string name="ui_activity_authenticating">认证</string>
    <string name="login_activity_loginfail_text_both">请输入有效的用户名/密码</string>
    <string name="login_activity_loginfail_text_pwonly">密码错误</string>
    <string name="label">返回</string>
    <string name="login_activity_newaccount_text">注册新用户</string>
    <string name="login_activity_loginfail_text_pwmissing">忘记密码？</string>
    <string name="user_name">用户名：</string>
    <string name="user_email">邮箱：</string>
    <string name="user_password">密码：</string>
    <string name="user_phone">电话：</string>
    <string name="error_field_required">请正确输入！</string>
    <string name="error_invalid_email">邮箱不正确！</string>
    <string name="error_email_exist">邮箱已存在！</string>
</resources>
