<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView android:id="@+id/login_form" android:layout_width="fill_parent"
        android:layout_height="match_parent" android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" android:layout_marginTop="10dp"
        android:background="@android:color/white"
        android:fillViewport="false">
        <LinearLayout android:id="@+id/email_login_form"
            android:paddingTop="5dip"
            android:paddingBottom="13dip"
            android:paddingLeft="20dip"
            android:paddingRight="20dip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:layout_gravity="center_vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:text="@string/user_name"
                        android:textColor="@color/colorPrimary"
                        android:textSize="12sp"
                        android:gravity="center_vertical|left"
                        android:textIsSelectable="false"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:padding="8dp"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.75"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:layout_gravity="center_vertical">

                    <EditText
                        android:id="@+id/user_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:drawable/editbox_background_normal"
                        android:gravity="center_vertical|left"
                        android:hint="@string/user_name"
                        android:inputType="textPersonName"
                        android:padding="8dp"
                        android:textColor="@color/primary_material_dark"
                        android:textIsSelectable="false"
                        android:textSize="12sp" />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:layout_gravity="center_vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:text="@string/user_email"
                        android:textColor="@color/colorPrimary"
                        android:textSize="12sp"
                        android:gravity="center_vertical|left"
                        android:textIsSelectable="false"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:padding="8dp"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.75"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:layout_gravity="center_vertical">
                    <EditText
                        android:id="@+id/user_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:drawable/editbox_background_normal"
                        android:hint="@string/user_email"
                        android:textSize="12sp"
                        android:gravity="center_vertical|left"
                        android:textIsSelectable="false"
                        android:padding="8dp"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/primary_material_dark"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:layout_gravity="center_vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:text="@string/user_password"
                        android:textColor="@color/colorPrimary"
                        android:textSize="12sp"
                        android:gravity="center_vertical|left"
                        android:textIsSelectable="false"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:padding="8dp"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.75"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:layout_gravity="center_vertical">

                    <EditText
                        android:id="@+id/user_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:drawable/editbox_background_normal"
                        android:gravity="center_vertical|left"
                        android:hint="@string/user_password"
                        android:inputType="textPassword"
                        android:padding="8dp"
                        android:textColor="@color/primary_material_dark"
                        android:textIsSelectable="false"
                        android:textSize="12sp" />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:layout_gravity="center_vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:text="@string/user_phone"
                        android:textColor="@color/colorPrimary"
                        android:textSize="12sp"
                        android:gravity="center_vertical|left"
                        android:textIsSelectable="false"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:padding="8dp"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.75"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:layout_gravity="center_vertical">
                    <EditText
                        android:id="@+id/user_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:drawable/editbox_background_normal"
                        android:hint="@string/user_phone"
                        android:textSize="12sp"
                        android:gravity="center_vertical|left"
                        android:textIsSelectable="false"
                        android:padding="8dp"
                        android:inputType="textPassword"
                        android:textColor="@color/primary_material_dark"/>
                </LinearLayout>
            </LinearLayout>
            <TextView
                android:id="@+id/user_info"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>